--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "backend-koa",
+  "name": "backend-video-club",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "@koa/router": "^13.1.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.16.0",
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16",
-    "koa-helmet": "^8.0.1"
+    "koa-helmet": "^8.0.1",
+    "mongoose": "^8.12.1"
   },
+  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
