--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16",
     "koa-helmet": "^8.0.1",
-    "mongoose": "^8.12.1"
+    "koa-passport": "^6.0.0",
+    "mongoose": "^8.12.1",
+    "passport-jwt": "^4.0.1"
   },
   "description": "",
   "devDependencies": {
