--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "@koa/router": "^13.1.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.16.0",
     "koa-bodyparser": "^4.4.1",
-    "koa-cors": "^0.0.16",
     "koa-helmet": "^8.0.1",
     "koa-passport": "^6.0.0",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.4-lts.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "description": "",
   "devDependencies": {
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
   }
